# ecoblock-api-kernel

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.dev.md  README.md  docker-compose.yml  prometheus.yml
.github/: CODEOWNERS
.github/workflows/: ci-redis.yml  ci.yml  docker-image.yml  sast.yml
data/wal/: 00000000  00000001
docs/: api.md  architecture.md  competences_mapping.md
migrations/: 0000_create_role.sql  0001_create_users.sql  0002_create_communication_tables.sql  0003_grant_privs.sql  0004_create_tangle_blocks.sql  0005_add_is_admin.sql
scripts/: db-setup.sh  export-db.sh  reset-db.sh  strip_comments.py  test_endpoints.sh
src/: cache.rs  db.rs  http_error.rs  kernel.rs  lib.rs  main.rs
src/plugins/: health.rs  metrics.rs  mod.rs
src/plugins/auth/: handlers.rs  middleware.rs  mod.rs  plugin.rs  repo.rs
src/plugins/communication/: mod.rs  shared.rs  upload.rs
src/plugins/tangle/: crypto.rs  crypto_tests.rs  handlers.rs  mod.rs  models.rs  plugin.rs  repo.rs  tests.rs
src/plugins/users/: handlers.rs  mod.rs  models.rs  plugin.rs  repo.rs  (+1 more)
tests/: common.rs  integration_auth.rs  integration_communication_blog.rs  integration_communication_pagination.rs  integration_communication_stories.rs  integration_http.rs  integration_redis_cache.rs  integration_tangle.rs  integration_tangle_signatures.rs  integration_upload.rs  integration_users_admin.rs
web-admin/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
web-admin/src/: App.tsx  index.css  main.tsx  styles.css  vite-env.d.ts
(+18 files in other folders)
