[package]
name = "ecoblock-api-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3", features = ["trace"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate", "uuid"] }
dotenvy = "0.15"
bcrypt = "0.14"
uuid = { version = "1", features = ["serde", "v4"] }
regex = "1"
jsonwebtoken = { version = "8", default-features = true }
chrono = { version = "0.4", features = ["serde"] }
tokio-test = { version = "0.4", optional = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
